Changes made in order page to fix errors regarding spacing

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -4,7 +4,6 @@ footer {
   margin-top: 5em;
   font-family: 'Lora', serif;
   color: white;
-  position: fixed;
   bottom: 0;
   .d-flex {
     display: flex;
