--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -38,6 +38,10 @@ header {
     }
     }
 
+    a {
+      color: white;
+    }
+
   }
 
 }
