--- a/styles/thank-you.scss
+++ b/styles/thank-you.scss
@@ -3,7 +3,7 @@ body{
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  font-family: 'Lora', serif;
+  font-family: 'Philosopher', serif;
   width: 100vw;
 
   // display: flex;
